filter on sales and newest + refactor
